Double Border Display Issue on TOC for Pages in Blog Posts #573
removing the redundant css causing the issue

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -322,7 +322,7 @@ div.ez-toc-widget-container li {
     display: initial;
 }
 
-#ez-toc-container .ez-toc-toggle label, #ez-toc-container label.cssicon, #ez-toc-widget-container label.cssicon  {
+#ez-toc-container .ez-toc-toggle label  {
     float: right;
     position: relative;
     font-size: 16px;
